<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_weight="5">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelTarefa"
        android:textSize="18sp"
        android:layout_marginBottom="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTarefa"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelData"
        android:textSize="18sp"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/datePicker"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelHora"
        android:textSize="18sp"/>

    <TimePicker
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/timePicker"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCancelar"
            android:id="@+id/btnCancelar"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSalvar"
            android:id="@+id/btnSalvar"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>
